fix overflow issue in Home

--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -20,15 +20,18 @@ $home-y-margin: 105px;
 }
 
 .home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
   height: 100vh;
-  overflow-y: hidden;
-  //remove remove remove remove hidden
 }
 
 .home__top {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 
   &__left {
     @include bigTopText();
@@ -52,8 +55,6 @@ $home-y-margin: 105px;
 }
 
 .home__bottom {
-  position: absolute;
-  bottom: 0px;
   width: 100%;
 
   & ul {
